--- a/index.html
+++ b/index.html
@@ -5,18 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CS2 Cheats</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>CS2 Cheats</h1>
-        <p>Obtenha vantagens no CS2 por apenas €15 por mês!</p>
+        <nav>
+            <h1>CS2 Cheats</h1>
+            <ul>
+                <li><a href="#about">Sobre</a></li>
+                <li><a href="#pricing">Preços</a></li>
+                <li><a href="#contact">Contato</a></li>
+            </ul>
+        </nav>
+        <div class="hero">
+            <h2>Obtenha vantagens no CS2 por apenas €15 por mês!</h2>
+            <button onclick="showPaymentOptions()">Subscrever Agora</button>
+        </div>
     </header>
     <main>
-        <section>
+        <section id="about">
             <h2>O que oferecemos</h2>
             <p>Cheats de alta qualidade que vão melhorar a sua experiência no CS2.</p>
+            <div class="features">
+                <div class="feature">
+                    <h3>Aim Assist</h3>
+                    <p>Melhore a sua precisão com nosso aim assist.</p>
+                </div>
+                <div class="feature">
+                    <h3>Wall Hack</h3>
+                    <p>Veja através das paredes e nunca seja surpreendido.</p>
+                </div>
+                <div class="feature">
+                    <h3>ESP</h3>
+                    <p>Informações detalhadas sobre os adversários.</p>
+                </div>
+            </div>
         </section>
-        <section>
+        <section id="pricing">
             <h2>Preços</h2>
             <p>Apenas €15 por mês.</p>
             <button onclick="showPaymentOptions()">Subscrever Agora</button>
@@ -35,8 +60,9 @@
             <button onclick="confirmSubscription('PayPal')">Confirmar Pagamento</button>
         </div>
     </div>
-    <footer>
+    <footer id="contact">
         <p>&copy; 2024 CS2 Cheats. Todos os direitos reservados.</p>
+        <p>Email: support@cs2cheats.com</p>
     </footer>
     <script src="script.js"></script>
 </body>
