--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS2 Cheats</title>
+    <title>FlowingCheats - CS2 Cheats</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <h1>CS2 Cheats</h1>
+            <img src="logo.png" alt="FlowingCheats Logo" class="logo">
             <ul>
                 <li><a href="#about">Sobre</a></li>
                 <li><a href="#pricing">Preços</a></li>
@@ -52,8 +52,18 @@
         <div class="payment-method">
             <h3>MB WAY</h3>
             <p>Número: 932581919</p>
-            <button onclick="confirmSubscription('MB WAY')">Confirmar Pagamento</button>
         </div>
         <div class="payment-method">
             <h3>PayPal</h3>
             <p>Email: davidteixeira832001@hotmail.com</p>
+            <p><strong>Por favor, pague como se fosse para familiares e amigos para evitar taxas.</strong></p>
+            <button onclick="window.location.href='https://www.paypal.com/paypalme/CuberZauum'">Pagar com PayPal</button>
+        </div>
+    </div>
+    <footer id="contact">
+        <p>&copy; 2024 FlowingCheats. Todos os direitos reservados.</p>
+        <p>Email: support@flowingcheats.com</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
