--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <img src="logo.png" alt="FlowingCheats Logo" class="logo">
             <ul>
                 <li><a href="#about">Sobre</a></li>
+                <li><a href="#features">Características</a></li>
                 <li><a href="#pricing">Preços</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
@@ -26,16 +27,27 @@
         <section id="about">
             <h2>O que oferecemos</h2>
             <p>Cheats de alta qualidade que vão melhorar a sua experiência no CS2.</p>
+        </section>
+        <section id="features">
+            <h2>Características do FlowingCheats</h2>
             <div class="features">
                 <div class="feature">
+                    <img src="menu-cheat.png" alt="Menu do Cheat" class="feature-image">
+                    <h3>Menu do Cheat</h3>
+                    <p>Interface amigável e fácil de usar.</p>
+                </div>
+                <div class="feature">
+                    <img src="aim-assist.png" alt="Aim Assist" class="feature-image">
                     <h3>Aim Assist</h3>
                     <p>Melhore a sua precisão com nosso aim assist.</p>
                 </div>
                 <div class="feature">
+                    <img src="wall-hack.png" alt="Wall Hack" class="feature-image">
                     <h3>Wall Hack</h3>
                     <p>Veja através das paredes e nunca seja surpreendido.</p>
                 </div>
                 <div class="feature">
+                    <img src="esp.png" alt="ESP" class="feature-image">
                     <h3>ESP</h3>
                     <p>Informações detalhadas sobre os adversários.</p>
                 </div>
